--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,7 @@ body {
     height: 100vh;
     font-family: poppins, sans-serif;
     font-size: 0.88rem;
+    background: var(--color-background);
     user-select: none;
     overflow-x: hidden;
 }
@@ -49,7 +50,6 @@ body {
     display: grid;
     width: 96%;
     margin: 0 auto;
-    background: red;
     gap: 1.8rem;
     grid-template-columns: 14rem auto 23rem;
 }
@@ -110,10 +110,9 @@ b {
 
 aside {
     height: 100vh;
-    background: gray;
 }
 
-aside.top {
+aside .top {
     background:white;
     display: flex;
     align-items: center;
@@ -131,6 +130,74 @@ aside .logo img {
     height: 2rem;
 }
 
-aside .closed {
+aside .close {
     display: none;
+}
+aside .sidebar {
+    background:white;
+    display: flex;
+    flex-direction: column;
+    height: 86vh;
+    position: relative;
+    top: 3rem;
+}
+
+aside h3 {
+    font-weight: 500;
+}
+
+aside .sidebar a {
+    display: flex;
+    color: var(--color-info-dark);
+    margin-left: 2rem;
+    gap: 1rem;
+    align-items: center;
+    position: relative;
+    height: 3.7rem;
+    transition: all 300ms ease;
+}
+
+aside .sidebar a span {
+    font-style: 1.6rem;
+    transition: all 300ms ease;
+}
+
+aside .sidebar a:last-child {
+    position: absolute;
+    bottom: 2rem;
+    width: 100%;
+}
+
+aside .sidebar a.active {
+    background: var(--color-light);
+    color:var(--color-primary);
+    margin-left: 0;
+}
+
+aside .sidebar a.active:before {
+    content: "";
+    width: 6px;
+    height: 100%;
+    background:var(--color-primary);
+}
+
+aside .sidebar a.active span{
+    color:var(--color-primary);
+    margin-left: calc(1rem - 3px);
+}
+
+aside .sidebar a:hover {
+    color:var(--color-primary);
+}
+
+aside .sidebar a:hover span{
+    margin-left: 1rem;
+}
+
+aside .sidebar .message-count {
+    background: var(--color-danger);
+    color: var(--color-white);
+    padding: 2px 10px;
+    font-size: 11px;
+    border-radius: var(--border-radius-1);
 }
