--- a/css/style.css
+++ b/css/style.css
@@ -307,5 +307,33 @@ main .insights small {
 
 /* here is main section styling end */
 
+/* Here is recent-order start */
+main .recent-order {
+    margin-top: 2rem;
+}
+main .recent-order h2 {
+    margin-bottom: 0.8rem;
+}
+main .recent-order table {
+    background: var(--color-white);
+    width: 100%;
+    border-radius: var(--card-border-radius);
+    padding: var(--card-padding);
+    text-align: center;
+    box-shadow:var(--box-shadow);
+    transition: all 300ms ease;
+}
+main .recent-order table:hover {
+    box-shadow:none;
+}
+main table tbody td {
+    height: 2.8rem;
+    border-bottom: 1px solid var(--color-light);
+    color: var(--color-dark-variant);
+}
+main table tbody tr:last-child td {
+    border:none;
+}
+/* Here is recent-order end */
 
 
