--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,17 @@
     --box-shadow: 0 2rem 3rem var(--color-light);
 }
 /* basic style */
+
+/* dark  variables */
+.dark-theme-variables {
+    --color-background:#181a1e;
+    --color-white:#202528;
+    --color-dark:#edeffd;
+    --color-dark-variant:#a3bdcc;
+    --color-light:rgba(0, 0, 0, 0.4);
+    --box-shadow:0 2rem 3rem var(--color-light);
+}
+
 * {
     margin: 0;
     padding: 0;
